[gd_scene load_steps=8 format=3 uid="uid://b6b6ijc8m8kca"]

[ext_resource type="Script" path="res://ui/skill_tree_ui.gd" id="1_44fad"]
[ext_resource type="Script" path="res://gameplay_character.gd" id="2_5stfg"]
[ext_resource type="Script" path="res://skill_tree/skill_tree_state.gd" id="3_gr3l3"]

[sub_resource type="Theme" id="Theme_un8q3"]
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 4

[sub_resource type="Resource" id="Resource_mqxpj"]
script = ExtResource("3_gr3l3")
acquired_skills = Array[StringName]([&"Always"])
unlocked_skills = Array[StringName]([&"Always"])
full_acquired = false
full_unlocked = true

[sub_resource type="Resource" id="Resource_bwe5d"]
script = ExtResource("2_5stfg")
name = "Bob"
character_id = 1
starting_kit = ""
description = ""
skill_tree_state = SubResource("Resource_mqxpj")
peer_id = 1
xp = 100
total_xp = 0

[sub_resource type="LabelSettings" id="LabelSettings_6lxjg"]
font_size = 14

[node name="SkillTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_un8q3")
script = ExtResource("1_44fad")
test_character = SubResource("Resource_bwe5d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{Character} Skill Tree"

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "General XP: 10
Tree XP: 20"
label_settings = SubResource("LabelSettings_6lxjg")

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Trees" type="TabContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Info about selected node..."

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Buy"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="OK" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OK" to="." method="_on_ok_pressed"]
